# chem-synth-ai-1

./: .gitattributes  .gitignore  ARCHITECTURE.md  README.md
backend/: .env.example  README.md  aspirin_output.json  output.txt  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: chem_langchain_agent.py
backend/app/api/: router.py
backend/app/api/routes/: chat.py  health.py  molecule.py  rag.py  report.py
backend/app/core/cache/: cache.py
backend/app/core/orchestrator/: intelligent_router.py  query_engine.py  query_router.py
backend/app/core/processing/: evidence_normalizer.py  evidence_scorer.py  normalizer.py
backend/app/core/validation/: molecule_validator.py  smiles_validator.py
backend/app/db/: connection.py  pg.py  sql_loader.py
backend/app/db/queries/: fetch_compounds_by_target.sql  fetch_evidence_by_chembl_id.sql  get_evidence_bundle.sql  get_evidence_by_activity_id.sql  get_moa_indications_warnings.sql  get_molecule_by_canonical_smiles.sql  get_molecule_by_chembl_id.sql  get_molecule_by_inchi_key.sql  get_molecule_by_pref_name.sql  get_molecules_bulk.sql  get_smiles_for_ingestion.sql  resolve_molecule_by_name.sql  resolve_molecule_with_synonyms.sql
backend/app/jobs/: build_milvus_index.py
backend/app/llm/: chemllm_client.py  schemas.py
backend/app/pipeline/: run_pipeline_raw.py
backend/app/routes/: chembl.py  similarity.py
backend/app/schemas/: final_report.py  molecule.py  molecule.py.save  records.py
backend/app/services/: chembl_service.py  deepchem_service.py  lora_report_service.py  milvus_service.py  normalization_service.py  query_parser_service.py  query_router.py  rag_orchestrator.py  rdkit_service.py  report_service.py  safe_query_guard.py  sar_analysis_service.py  validation_service.py
backend/app/training/: report_dataset_builder.py  report_lora_finetune.py
backend/debug/: layer2_diff_check.py
backend/scripts/: debug_report.py  test_ingest_phase2.py  verify_chem_env.sh
backend/tests/: conftest.py  test_phase2_e2e.py  test_phase3_e2e.py  test_phase4_e2e.py  test_rdkit_normalize.py
backend/tests/fixtures/: aspirin_case.json  celecoxib_case.json  ibuprofen_case.json  paracetamol_case.json
backend/tests/report_generation/: test_lora_report_quality.py
(+52 files in other folders)
